--- a/defSet/xiuxian/xiuxian.yaml
+++ b/defSet/xiuxian/xiuxian.yaml
@@ -2,17 +2,15 @@
 CD: 
 #宗门维护  
   #突破                
-  Level_up: 5
+  LevelUp: 5
   #破体
-  LevelMax_up: 5     
+  LevelMaxUp: 5     
   #道宣
   Autograph: 60
   #改名
-  Name: 1240
+  ReName: 1240
   #重生         
   Reborn: 360    
-  #赠送             
-  Transfer: 60  
   #攻击
   Attack: 5
   #击杀
@@ -44,24 +42,28 @@ work:
   #最低时间
   time: 10 
 
-# 纳戒存储量
-najie_num: 
-  - 20000  
-  - 50000 
-  - 100000
-  - 300000
-  - 500000
-  - 1000000
-  - 2000000
-  - 5000000
+# 背包相关
+backpack:
+  # 最高等级
+  maxLevel: 8
+  # 存储量
+  capacity: 
+    - 20000  
+    - 50000 
+    - 100000
+    - 300000
+    - 500000
+    - 1000000
+    - 2000000
+    - 5000000
 
-# 纳戒升级消耗(数量级保持一致)
-najie_price: 
-  - 0 
-  - 20000
-  - 50000
-  - 100000
-  - 300000
-  - 500000
-  - 1000000
-  - 2000000
+  # 升级消耗(数量级保持一致)
+  upgradeCost: 
+    - 0 
+    - 20000
+    - 50000
+    - 100000
+    - 300000
+    - 500000
+    - 1000000
+    - 2000000
