--- a/config/game/cd.yaml
+++ b/config/game/cd.yaml
@@ -14,3 +14,21 @@ action:
   attack: 5
   #击杀
   kill: 3
+
+skill:
+  叶落归尘: 10
+  红尘一梦: 10
+  浮光掠影: 10
+  镜花水月: 10
+  狱火炼魂: 10
+  天地同寿: 10
+  终极伏特狂雷闪: 10
+  绚烂缤纷花怒放: 10
+  风雷鼓舞三千郎: 10
+  九霄龙吟惊天变: 10
+  封魔追魂烈焰斩: 10
+  夤夜对雪长空断: 10
+  大地荒芜崩山击: 10
+  八卦游龙惊风破: 10
+  极烈之枪: 10
+  万法归一: 10
