--- a/config/game/cd.yaml
+++ b/config/game/cd.yaml
@@ -15,6 +15,7 @@ action:
   #击杀
   kill: 3
 
+#玩家技能cd
 skill:
   叶落归尘: 10
   红尘一梦: 10
@@ -24,7 +25,7 @@ skill:
   天地同寿: 10
   终极伏特狂雷闪: 10
   绚烂缤纷花怒放: 10
-  风雷鼓舞三千郎: 10
+  风雷鼓舞三千浪: 10
   九霄龙吟惊天变: 10
   封魔追魂烈焰斩: 10
   夤夜对雪长空断: 10
