--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ plugins/xiuxian-association-pluging/resources/Association
 resources/help/help.jpg
 resources/data/birth/**/*.json
 resources/data/birth/*.json
+.vscode
