--- a/config/help/help.yaml
+++ b/config/help/help.yaml
@@ -16,8 +16,8 @@
       title: "#储物袋 #升级储物袋"
       desc: "物品查询,容量提升"
     - icon: help-icon_42
-      title: "#消耗+道具名"
-      desc: "消耗道具"
+      title: "#使用+道具名"
+      desc: "使用道具"
     - icon: help-icon_6
       title: "#服用+丹药名"
       desc: "服用丹药"
@@ -46,15 +46,6 @@
       title: "#装备信息"
       desc: "(可私聊)"
     - icon: help-icon_44
-      title: "#学习功法+功法名"
-      desc: "学习功法"
-    - icon: help-icon_44
-      title: "#忘掉功法+功法名"
-      desc: "忘掉功法"
-    - icon: help-icon_38
-      title: "#功法信息"
-      desc: "(可私聊)"
-    - icon: help-icon_44
       title: "#学习技能+技能名"
       desc: "学习技能"
     - icon: help-icon_44
@@ -62,6 +53,24 @@
       desc: "忘掉技能"
     - icon: help-icon_38
       title: "#技能信息"
+      desc: "(可私聊)"
+
+- group: 
+  list:
+    - icon: help-icon_44
+      title: "#学习功法+功法名"
+      desc: "学习功法"
+    - icon: help-icon_44
+      title: "#忘掉功法+功法名"
+      desc: "忘掉功法"
+    - icon: help-icon_44
+      title: "#钻研功法+功法名"
+      desc: "钻研功法"
+    - icon: help-icon_44
+      title: "#自创功法+功法名"
+      desc: "自创功法"
+    - icon: help-icon_38
+      title: "#功法信息"
       desc: "(可私聊)"
 
 - group: 
