调整灵根 练气炼体参数到cfg

--- a/config/game/player.yaml
+++ b/config/game/player.yaml
@@ -17,3 +17,198 @@ exercise:
   efficiency: 2 
   #最少时间
   minTime: 10 
+
+#灵根数组
+spritualRoot:
+  - 金
+  - 木
+  - 水
+  - 火
+  - 土
+  - 雷
+  - 光
+  - 暗
+  - 冰
+  - 风
+
+#练气等级参数
+levelList:
+  - name: 凡人
+    exp: 2200
+    attack: 505
+    defense: 396
+    blood: 2000
+    burst: 5
+    burstmax: 25
+    speed: 1
+  - name: 练气
+    exp: 3300
+    attack: 957
+    defense: 731
+    blood: 3791
+    burst: 5
+    burstmax: 25
+    speed: 2
+  - name: 筑基
+    exp: 4950
+    attack: 1725
+    defense: 1283
+    blood: 6833
+    burst: 5
+    burstmax: 25
+    speed: 3
+  - name: 金丹
+    exp: 7425
+    attack: 2971
+    defense: 2151
+    blood: 11767
+    burst: 5
+    burstmax: 25
+    speed: 4
+  - name: 元婴
+    exp: 11137
+    attack: 4916
+    defense: 3462
+    blood: 19471
+    burst: 5
+    burstmax: 25
+    speed: 5
+  - name: 化神
+    exp: 16706
+    attack: 7860
+    defense: 5381
+    blood: 31131
+    burst: 5
+    burstmax: 25
+    speed: 6
+  - name: 洞虚
+    exp: 25059
+    attack: 12227
+    defense: 8130
+    blood: 48425
+    burst: 5
+    burstmax: 25
+    speed: 7
+  - name: 合体
+    exp: 37588
+    attack: 18641
+    defense: 12031
+    blood: 73829
+    burst: 5
+    burstmax: 25
+    speed: 8
+  - name: 大乘
+    exp: 56382
+    attack: 28076
+    defense: 17567
+    blood: 111194
+    burst: 5
+    burstmax: 25
+    speed: 9
+  - name: 渡劫
+    exp: 84574
+    attack: 42114
+    defense: 25525
+    blood: 166791
+    burst: 5
+    burstmax: 25
+    speed: 10
+  - name: 地仙
+    exp: 200000
+    attack: 200000
+    defense: 200000
+    blood: 200000
+    burst: 5
+    burstmax: 25
+    speed: 11
+
+#炼体等级参数
+bodyLevelList:
+  - name: 莽夫
+    exp: 2200
+    attack: 495
+    defense: 404
+    blood: 2000
+    burst: 8
+    burstmax: 50
+    speed: 1
+  - name: 炼皮
+    exp: 3300
+    attack: 919
+    defense: 1210
+    blood: 3791
+    burst: 5
+    burstmax: 25
+    speed: 2
+  - name: 炼肉
+    exp: 4950
+    attack: 1623
+    defense: 2103
+    blood: 6833
+    burst: 5
+    burstmax: 25
+    speed: 3
+  - name: 炼筋
+    exp: 7425
+    attack: 2737
+    defense: 3506
+    blood: 11767
+    burst: 5
+    burstmax: 25
+    speed: 4
+  - name: 炼骨
+    exp: 11137
+    attack: 4433
+    defense: 5643
+    blood: 19471
+    burst: 5
+    burstmax: 25
+    speed: 5
+  - name: 炼血
+    exp: 16706
+    attack: 6934
+    defense: 8827
+    blood: 31131
+    burst: 5
+    burstmax: 25
+    speed: 6
+  - name: 炼脏
+    exp: 25059
+    attack: 10546
+    defense: 13514
+    blood: 48425
+    burst: 5
+    burstmax: 25
+    speed: 7
+  - name: 炼魂
+    exp: 37588
+    attack: 15714
+    defense: 20404
+    blood: 73829
+    burst: 5
+    burstmax: 25
+    speed: 8
+  - name: 炼神
+    exp: 56382
+    attack: 23117
+    defense: 30633
+    blood: 111194
+    burst: 5
+    burstmax: 25
+    speed: 9
+  - name: 破体
+    exp: 84574
+    attack: 33850
+    defense: 33787
+    blood: 166791
+    burst: 5
+    burstmax: 25
+    speed: 10
+  - name: 地圣
+    exp: 200000
+    attack: 200000
+    defense: 200000
+    blood: 200000
+    burst: 5
+    burstmax: 25
+    speed: 11
